[tool.poetry]
name = "python-project-lvl1"
version = "0.1.0"
description = "Package contains 5 console games. Each game asks questions that need to be answered correctly"
authors = ["Dm1triiSmirnov <smirnov0719@gmail.com>"]
packages = [
  { include = "brain_games"}
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"repository" = "git@github.com:Dm1triiSmirnov/python-project-lvl1.git"
